implement order-related process